--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
     - cron: '0 0 1,15 * *'
 
 jobs:
-  general_module_workflow:
+  general_module_workflow_php:
     uses: Karaka-Management/Karaka/.github/workflows/php_template.yml@develop
     secrets:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
